[FIX] requirements: fix sphinxcontrib versions
It seems that the latest version if sphinx contrib libs needs sphinx 5.0.

X-original-commit: 38bd71fa130375d20a2cfccb18474459a4cbf7a6

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,9 @@ libsass==0.20.1
 pygments~=2.6.1
 pygments-csv-lexer~=0.1
 sphinx==4.3.2
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-qthelp==1.0.3
 sphinx-tabs==3.2.0
